@@ -17,6 +17,7 @@
 - API Change: Enable the AL_DIRECT_CHANNELS_SOFT option for Sounds and AudioDevices as well to fix stereo sound
 - API Addition: CameraInputController#setInvertedControls(boolean)
 - API Removal: AnimatedTiledMapTile#frameCount
+- FIX: HexagonalTiledMapRenderer now displays maps with the correct stagger index.
 
 [1.10.0]
 - [BREAKING CHANGE] Android armeabi support has been removed. To migrate your projects: remove any dependency with natives-armeabi qualifier from your gradle build file, this apply to gdx-platform, gdx-bullet-platform, gdx-freetype-platform and gdx-box2d-platform.
